client/src/Notifications/NotificationsContainer.css
#notifications-container {
  margin-top: 70px;
  margin-left: 10px;
  margin-right: 10px;
}

.notifications-container-TOP_LEFT {
  position: absolute;
  top: 0;
  left: 0;
}

.notifications-container-TOP_RIGHT {
  position: absolute;
  top: 0;
  right: 0;
}

.notifications-container-BOTTOM_LEFT {
  position: absolute;
  bottom: 0;
  left: 0;
}

.notifications-container-BOTTOM_RIGHT {
  position: absolute;
  bottom: 0;
  right: 0;
}

